force-app/main/default/objects/Referral_Assignment__c/Referral_Assignment__c.object-meta.xml
<CustomObject>
    <description>Persons to which a referral has been assigned</description>
    <label>Referral Assignment</label>
    <nameField>
        <displayFormat>AID-{000000}</displayFormat>
        <label>Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>