force-app/main/default/objects/Referral_Assignment__c/fields/Assigned_Employee__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The employee to which the referral has been assigned. Rules for which employees can be assigned to which referrals set by trigger.</description>
    <inlineHelpText>Please select the Attorney you would like assigned to this Referral.</inlineHelpText>
    <label>Assigned Attorney</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>DIR_Employee__c.Position__c</field>
            <operation>equals</operation>
            <value>Legal</value>
        </filterItems>
        <filterItems>
            <field>DIR_Employee__c.Title__c</field>
            <operation>equals</operation>
            <value>Attorney</value>
        </filterItems>
        <infoMessage>Assigned Attorney must be an Internal Employee with a Position of &quot;Legal&quot; OR a Title of &quot;Attorney&quot;</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Referral Assignments</relationshipLabel>
    <relationshipName>Referral_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>