force-app/main/default/objects/Referral_Assignment__c/fields/Assigned_Employee_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Employee_Email_Address__c</fullName>
    <description>No longer a used field. Superceded by the Employee Email field that is set by flow when assignment is made.</description>
    <formula>Assigned_Employee__r.Email__c</formula>
    <label>Assigned Employee Email Address</label>
    <type>Text</type>
</CustomField>