force-app/main/default/objects/Referral_Assignment__c/fields/Currently_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Currently_Assigned__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows a user to be unassigned and keep the history of who was assigned</description>
    <inlineHelpText>If unassigning an individual from this referral, uncheck this box and create a new assignment</inlineHelpText>
    <label>Currently Assigned</label>
    <type>Checkbox</type>
</CustomField>