force-app/main/default/objects/Referral_Assignment__c/fields/Employee_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email__c</fullName>
    <description>Set by the &quot;Set referral data on referral assignment flow.&quot; Used in standard workflow email templates</description>
    <label>Employee Email</label>
    <type>Email</type>
</CustomField>