force-app/main/default/objects/Referral_Assignment__c/fields/I_am_assigned_attorney__c.field-meta.xml
<CustomField>
    <fullName>I_am_assigned_attorney__c</fullName>
    <description>Used to create the Referral Assignment list view &quot;My Referral Assignments&quot; to filter for all Referrals assigned to the logged in User as Assigned Attorney.</description>
    <formula>$User.Id = Assigned_Employee__r.User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I am assigned attorney</label>
    <type>Checkbox</type>
</CustomField>