force-app/main/default/objects/Referral_Assignment__c/fields/Referral_Last_Modified_Days__c.field-meta.xml
<CustomField>
    <fullName>Referral_Last_Modified_Days__c</fullName>
    <formula>Referral__r.Last_Modified_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Last Modified (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>