force-app/main/default/objects/Referral_Assignment__c/fields/Referral_Link__c.field-meta.xml
<CustomField>
    <fullName>Referral_Link__c</fullName>
    <description>Holds the link to the parent referral for use in workflow alerts</description>
    <label>Referral Link</label>
    <type>Url</type>
</CustomField>