force-app/main/default/objects/Referral_Assignment__c/fields/Referral_Status__c.field-meta.xml
<CustomField>
    <fullName>Referral_Status__c</fullName>
    <description>Status of the parent Referral. Used for list view filtering.</description>
    <formula>TEXT(Referral__r.Request_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Status</label>
    <type>Text</type>
</CustomField>