force-app/main/default/objects/Referral_Assignment__c/fields/Second_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Reminder_Date__c</fullName>
    <description>For referrals where only one employee can be assigned at a time, defines the date on which the second reminder is to be sent.</description>
    <label>Second Reminder Date</label>
    <type>Date</type>
</CustomField>