force-app/main/default/objects/Referral_Assignment__c/validationRules/BOFE_Approve_referral_before_assigning.validationRule-meta.xml
<ValidationRule>
    <fullName>BOFE_Approve_referral_before_assigning</fullName>
    <active>true</active>
    <description>Ensure that the referral has been approved before assignments are made.</description>
    <errorConditionFormula>(
  Referral__r.RecordType.DeveloperName = &#39;BOFE_Civil_Litigation_Referral&#39;
  ||
  Referral__r.RecordType.DeveloperName = &#39;BOFE_Request_for_Legal_Court_Action&#39;
  ||
  Referral__r.RecordType.DeveloperName = &#39;BOFE_Request_for_Legal_Services&#39;
)
&amp;&amp;
(
  ISPICKVAL (  Referral__r.Request_Status__c , &#39;Pending Approval&#39; ) 
  || 
  ISPICKVAL (  Referral__r.Request_Status__c , &#39;Denied&#39; )
  ||
  ISPICKVAL (  Referral__r.Request_Status__c , &#39;Closed&#39; )
)
&amp;&amp; 
( 
  ISNEW() 
  || 
  ( 
    Currently_Assigned__c 
    &amp;&amp; 
    !PRIORVALUE( Currently_Assigned__c) 
  )
)</errorConditionFormula>
    <errorMessage>Please approve the referral before assigning to an attorney. A referral must also be active in order to be assigned.</errorMessage>
</ValidationRule>