force-app/main/default/objects/Referral_Assignment__c/validationRules/BOFE_Legal_Referral_Position.validationRule-meta.xml
<ValidationRule>
    <fullName>BOFE_Legal_Referral_Position</fullName>
    <active>true</active>
    <description>Requires that the position of the assigned employee for a BOFE Legal referral is Legal</description>
    <errorConditionFormula>( 
  Referral__r.RecordType.DeveloperName = &#39;BOFE_Civil_Litigation_Referral&#39;
  ||
  Referral__r.RecordType.DeveloperName = &#39;BOFE_Request_for_Legal_Court_Action&#39;
  ||
  Referral__r.RecordType.DeveloperName = &#39;BOFE_Request_for_Legal_Services&#39;
)
&amp;&amp;
 
NOT ( ISPICKVAL( Assigned_Employee__r.Position__c , &#39;Legal&#39; ) || ISPICKVAL( Assigned_Employee__r.Title__c , &#39;Attorney&#39;) )</errorConditionFormula>
    <errorMessage>You can only assign a &quot;Legal&quot; employee to this type of referral</errorMessage>
</ValidationRule>