force-app/main/default/objects/Referral_Assignment__c/listViews/My_Open_Referral_Assignments.listView-meta.xml
<ListView>
    <fullName>My_Open_Referral_Assignments</fullName>
    <columns>Referral__c</columns>
    <columns>Referral_Status__c</columns>
    <columns>Assigned_Employee__c</columns>
    <columns>First_Reminder_Date__c</columns>
    <columns>Second_Reminder_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_am_assigned_attorney__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Currently_Assigned__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Referral_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed,Rejected,Denied,Settled</value>
    </filters>
    <label>My Open Referral Assignments</label>
</ListView>